--- a/.gitignore
+++ b/.gitignore
@@ -232,3 +232,5 @@ $RECYCLE.BIN/
 /lab1/JavaApplication4/dist/
 /lab1a/JavaApplication4/dist/
 /lab1a/JavaApplication4/nbproject/private/
+/lab1a/lab1a/dist/
+/lab1a/lab1a/nbproject/private/
