--- a/lab1b/nbproject/private/private.properties
+++ b/lab1b/nbproject/private/private.properties
@@ -3,4 +3,4 @@ do.depend=false
 do.jar=true
 javac.debug=true
 javadoc.preview=true
-user.properties.file=C:\\Users\\Lord Yod\\AppData\\Roaming\\NetBeans\\8.0.2\\build.properties
+user.properties.file=C:\\Users\\Pete\\AppData\\Roaming\\NetBeans\\8.0.2\\build.properties
